# pycfftables

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yaml
docs/: api.rst  conf.py  index.rst
docs/api/: cff.rst  cfftable.rst
src/pycfftables/: __init__.py  _lib.pxd  _lib.pyi  _lib.pyx
tests/: conftest.py  test_cff_table.py  test_cff_views.py  test_direct_constructions.py  test_recursive_constructions.py
